2009-04-07  Alan Modra  <amodra@bigpond.net.au>

	PR target/39634
	* config.gcc (powerpc-*-linux*): Include soft-fp/t-softfp after
	rs6000/t-linux64.

2009-04-02  David Ayers  <ayers@fsfe.org>
 
	PR objc/27377
	* c-typeck.c (build_conditional_expr): Emit ObjC warnings
	by calling objc_compare_types and surpress warnings about
	incompatible C pointers that are compatible ObjC pointers.
	
2009-04-01  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/39588
	* combine.c (merge_outer_ops): Do not set the constant when this
	is not necessary.
	(simplify_shift_const_1): Do not modify it either in this case.

2009-03-26  Ben Elliston  <bje@au.ibm.com>

	Backport from mainline:
	2009-02-19  Jakub Jelinek  <jakub@redhat.com>

	PR target/39175
	* c-common.c (c_determine_visibility): If visibility changed and
	DECL_RTL has been already set, call make_decl_rtl to update symbol
	flags.

2009-03-24  Ralf Corsépius <ralf.corsepius@rtems.org>

	* config/m68k/t-rtems: Add m5329 multilib.

2009-03-23  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-03-17  Uros Bizjak  <ubizjak@gmail.com>

	PR target/39482
	* config/i386/i386.md (*truncdfsf_mixed): Avoid combining registers
	from different units in a single alternative.
	(*truncdfsf_i387): Ditto.
	(*truncxfsf2_mixed): Ditto.
	(*truncxfdf2_mixed): Ditto.

2009-03-17  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39477
	* doc/extend.texi: Correct register behavior for regparm on Intel 386.

2009-03-12  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-03-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/39327
	* config/i386/sse.md (sse3_addsubv4sf3): Correct item bits.
	(sse3_addsubv2df3): Likewise.

2009-03-09  Denis Chertykov  <denisc@overta.ru>

	* config/avr/avr.md ("andsi3"): Fix wrong cc attribute.

2009-03-02  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/mips.c (mips_mdebug_abi_name): Fix the handling