@@ -1,3 +1,11 @@
+2009-04-14  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline:
+	2009-04-12  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/39740
+	* gcc.target/alpha/pr39740.c: New test.
+
 2009-04-13  Jason Merrill  <jason@redhat.com>
 
 	PR c++/39480
