@@ -1,3 +1,12 @@
+2009-04-14  Uros Bizjak  <ubizjak@gmail.com>
+
+	Backport from mainline:
+	2009-04-12  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/39740
+	* config/alpha/predicates.md (local_symbolic_operand): Return 1 for
+	offseted label references.
+
 2009-04-07  Alan Modra  <amodra@bigpond.net.au>
 
 	PR target/39634
@@ -5,7 +14,7 @@
 	rs6000/t-linux64.
 
 2009-04-02  David Ayers  <ayers@fsfe.org>
- 
+
 	PR objc/27377
 	* c-typeck.c (build_conditional_expr): Emit ObjC warnings
 	by calling objc_compare_types and surpress warnings about
